# iricore

./: .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile3  README.md  build.py  poetry2req.sh  pyproject.toml  setup.py
docs/: conf.py  index.rst  installation.rst  reference.rst  release_notes.rst  requirements.txt  user_guide.rst
docs/user_guide/: index.rst
examples/: basic_usage.py  comparison.py
src/core/: iri_core.f90
src/iricore/: CMakeLists.txt  __init__.py  config.py  data_update.py  iri.py  iri_flags.py  irioutput.py  modules.py  python_interface.f90  python_stec.f90  raytracing.py  read_iri_data.py  tec.py
src/iricore/iri2016/: igrf.for  iri_fcore.f90  irifun.for  irirtam.for  irisub.for  python_interface.f90
src/iricore/iri2020/: igrf.for  iriflip.for  irifun.for  irisub.for  python_interface.f90  rocdrift.for
src/iricore/iri2020_old/: irifun.for
src/iricore/modules/: ion_tools.py
src/iricore/src/: Makefile  iri_core.for  iri_fcore.f90  iri_fcore.pyf  irisub.for  irisubmod.for  test_iri.f90
tests/: test_ed.py  test_iri.py  test_stec.py  test_tec.py  test_tecs.npy
tests/data/: iri20_data.npy  stec_data.npy  test_iri2016_data.txt  test_iri2020_data.txt  vtec_data.npy
