[tool.poetry]
name = "iricore"
version = "1.5.0.dev0"
description = "A Python wraper to the Inernational Ionosphere Model"
authors = ["Vadym Bidula <vadym.bidula@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.25.0"
fortranformat = "^2.0.0"
pymap3d = "^3.0.1"


[tool.poetry.group.dev.dependencies]
cartopy = "^0.21.1"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
astropy = "^5.3.1"
jupyter = "^1.0.0"

[build-system]
requires = ["cmake", "poetry-core",  "wheel", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
