[tool.poetry]
name = "iricore"
version = "1.7.0"
description = "A Python wraper to the Inernational Ionosphere Model"
authors = ["Vadym Bidula <vadym.bidula@gmail.com>"]
readme = "README.md"
build = "build.py"

include = [
    # Source files for Fortran extensions must be included in the source distribution.
    {path = "CMakeLists.txt", format = "sdist"},
    {path = "src/iricore/*.f90", format = "sdist"},
    {path = "src/iricore/iri2016/*.for", format = "sdist"},
    {path = "src/iricore/iri2020/*.for", format = "sdist"},
    # Generated binaries must be included in the wheel distribution.
    {path = "iricore/*.so", format = "wheel"},
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.25.0"
fortranformat = "^2.0.0"
pymap3d = { extras = ["core"], version = "^3.0.1" }

[tool.poetry.group.dev.dependencies]
cartopy = "^0.21.1"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"

[tool.poetry.group.build.dependencies]
scikit-build = "^0.17.6"
cmake = "^3.26.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
sphinx-autodoc-typehints = "^1.23.3"
future-typing = "^0.4.1"
sphinxemoji = "^0.2.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["scikit-build", "cmake", "poetry-core"]
build-backend = "poetry.core.masonry.api"
